Sprint3 for templates and forms

--- a/iadsapp/templates/top100_games.html
+++ b/iadsapp/templates/top100_games.html
@@ -5,7 +5,7 @@
     <title>Top 100 Games</title>
 </head>
 <body>
-    <h1>Top 100 Games</h1>
+    <h1>Top 100 Games On Ratings</h1>
     <div>
         {% for game in top_games %}
             <div>
