--- a/iadsapp/static/iadsapp/game_type_style.css
+++ b/iadsapp/static/iadsapp/game_type_style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #3aa8b7;
+    background-color: #943ab7;
     padding: 20px;
 }
 
