Game Types and details template

--- a/iadsapp/templates/game_detail.html
+++ b/iadsapp/templates/game_detail.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Game Details</title>
+    <title>Game Detail</title>
     <link rel="stylesheet" type="text/css" href="{% static 'iadsapp/game_detail_style.css' %}">
 
 </head>
