--- a/iadsapp/static/iadsapp/game_type_style.css
+++ b/iadsapp/static/iadsapp/game_type_style.css
@@ -1,37 +1,60 @@
-/* styles.css */
+/* game_type_style.css */
+.gradient-text {
+    font-size: 50px;
+    background-image: linear-gradient(to right, rgba(230, 0, 255, 0.67), rgba(255, 0, 77, 0.67)); /* Gradient color */
+    -webkit-background-clip: text; /* Clip the background to text */
+    -webkit-text-fill-color: transparent; /* Make the text transparent */
+    font-weight: bold; /* Make the text bold */
+        text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+
+}
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #943ab7;
+    background-color: #ffffff;
     padding: 21px;
 }
 
-ul {
+ul.game-types {
     list-style-type: none;
     padding: 0;
 }
 
-
-li {
+.game-type {
     margin-bottom: 10px;
-    background-color: rgba(141, 43, 152, 0.67);
-    border-radius: 5px;
+    background-color: transparent;
+    border: none;
     padding: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
 }
 
-li:hover {
+.game-type:hover {
     transform: translateY(-3px);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: none;
+    color: rgba(230, 0, 255, 0.67); /* Change color on hover */
+}
+.game-type:hover a {
+    color: rgba(255, 0, 136, 0.67); /* Change color on hover */
 }
 
 a {
     text-decoration: none;
-    color: #333;
+    color: inherit;
     font-weight: bold;
 }
 
-a:hover {
-    color: #ff6600;
+.image-gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Two columns */
+    grid-gap: 10px; /* Gap between grid items */
+}
+
+.image-gallery img {
+    max-width: 100%;
+    height: auto;
+    transition: transform 0.3s ease;
+}
+
+.image-gallery img:hover {
+    transform: scale(1.05);
 }
