--- a/iadsapp/templates/game_types.html
+++ b/iadsapp/templates/game_types.html
@@ -5,14 +5,31 @@
     <meta charset="UTF-8">
     <title>Game Types</title>
     <link rel="stylesheet" type="text/css" href="{% static 'iadsapp/game_type_style.css' %}">
+    <!-- Add Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <ul>
-        {% for game in game_types %}
-            <li>
-                {{ game.id }} <a href="{% url 'game_detail' game.id %}">{{ game.name }}</a>
-            </li>
-        {% endfor %}
-    </ul>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+        <h2 class="gradient-text">Games Genres/Themes</h2>
+
+            <ul class="game-types">
+                {% for game in game_types %}
+                    <li class="game-type" style="color: {{ game.color }}">{{ game.id }} <a href="{% url 'game_detail' game.id %}">{{ game.name }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div class="col-md-6">
+            <div class="image-gallery"><br>
+                <br><br><br><br>
+                <img src="{% static 'images/image1.jpg' %}" alt="Image 1">
+                <img src="{% static 'images/image3.jpg' %}" alt="Image 3">
+                <img src="{% static 'images/image4.jpg' %}" alt="Image 4">
+                <img src="{% static 'images/image6.jpg' %}" alt="Image 6">
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
