--- a/iadsapp/templates/index.html
+++ b/iadsapp/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,8 +8,8 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{% static 'css/materialize.css'%}" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{% static 'css/style.css'%}" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
   <!-- Dropdown Structure -->
@@ -31,7 +32,7 @@
           padding-top: 10px;
       }
   </style>
-    <a href="#!" class="brand-logo"><img src="img/icons/game.png" alt=""></a>
+    <a href="#!" class="brand-logo"><img src="{% static 'img/icons/game.png'%}" alt=""></a>
     <ul class="right hide-on-med-and-down">
       <!-- Dropdown Trigger -->
       <li><a href="badges.html">Sign In</a></li>
@@ -66,7 +67,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="img/call.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="{% static 'img/call.jpg'%}" alt="Unsplashed background img 1"></div>
   </div>
 
 
@@ -148,8 +149,8 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="{% static 'js/materialize.js'%}"></script>
+  <script src="{% static 'js/init.js'%}"></script>
 
   </body>
 </html>
