--- a/iadsapp/templates/search_results.html
+++ b/iadsapp/templates/search_results.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,8 +8,8 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{% static 'css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{% static 'css/style.css'%}" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
   <nav class = 'light-blue'>
@@ -21,7 +22,7 @@
             padding-top: 10px;
         }
     </style>
-      <a href="#!" class="brand-logo"><img src="img/icons/game.png" alt=""></a>
+      <a href="#!" class="brand-logo"><img src="{% static 'img/icons/game.png' %}" alt=""></a>
       <ul class="right hide-on-med-and-down">
         <!-- Dropdown Trigger -->
         <li><a href="badges.html">Sign In</a></li>
@@ -51,7 +52,7 @@
         <div class="col s12 m4">
             <div class="card">
               <div class="card-image">
-                <img width="300" height="350" src="img/fifa1.jpg"> 
+                <img width="300" height="350" src="{% static 'img/fifa1.jpg'%}"> 
               </div>
               <div class="card-content">
                 <span class="card-title"><b>FIFA 10</b></span>
@@ -65,7 +66,7 @@
           <div class="col s12 m4">
             <div class="card">
               <div class="card-image">
-                <img width="300" height="350" src= "img/fifa2.jpg">
+                <img width="300" height="350" src= "{% static 'img/fifa2.jpg'%}">
               </div>
               <div class="card-content">
                 <span class="card-title"><b>FIFA 12</b></span>
@@ -78,7 +79,7 @@
           <div class="col s12 m4">
             <div class="card">
               <div class="card-image">
-                <img width="300" height="350"src="img/fifa3.jpg">
+                <img width="300" height="350"src="{% static 'img/fifa3.jpg'%}">
               </div>
               <div class="card-content">
                 <span class="card-title"><b>FIFA 14</b></span>
@@ -105,8 +106,8 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="{% static 'js/materialize.js'%}"></script>
+  <script src="{% static 'js/init.js'%}"></script>
 
   </body>
 </html>
