--- a/iadsapp/templates/index.html
+++ b/iadsapp/templates/index.html
@@ -14,13 +14,13 @@
 <body>
   <!-- Dropdown Structure -->
 <ul id="dropdown1" class="dropdown-content">
-  <li><a href="#!">Calender</a></li>
-  <li><a href="#!">Top 100 Games</a></li>
-  <li><a href="#!">Most Popular</a></li>
-  <li><a href="#!">Games by Genre</a></li>
+  <li><a href="">Calender</a></li>
+  <li><a href="{% url 'top100_games' %}">Top 100 Games</a></li>
+  <li><a href="{% url 'most_popular_games' %}">Most Popular</a></li>
+  <li><a href="{% url 'game_type' %}">Games by Genre</a></li>
   <li><a href="#!">Awards</a></li>
   <li class="divider"></li>
-  <li><a href="#!">Games News</a></li>
+  <li><a href="{% url 'upcoming_releases' %}">Games News</a></li>
 </ul>
 <nav class = 'light-blue'>
   <div class="nav-wrapper">
@@ -35,7 +35,7 @@
     <a href="#!" class="brand-logo"><img src="{% static 'img/icons/game.png'%}" alt=""></a>
     <ul class="right hide-on-med-and-down">
       <!-- Dropdown Trigger -->
-      <li><a href="badges.html">Sign In</a></li>
+      <li><a href="{% url 'signup' %}">Sign Up</a></li>
       <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Menu<i class="material-icons right">arrow_drop_down</i></a></li>
     </ul>
   </div>
