--- a/iadsapp/templates/game_details.html
+++ b/iadsapp/templates/game_details.html
@@ -7,8 +7,21 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <style>
+    /* Add custom styles here */
+    body {
+      background-color: #f5f5f5;
+    }
+    .container {
+      width: 90%;
+      margin: 0 auto;
+    }
+    .card {
+      width: 100%;
+    }
+    /* Add more styles as needed */
+  </style>
 </head>
 <body>
   <nav class="cyan" role="navigation">
@@ -34,29 +47,29 @@
 
       <!--   Icon Section   -->
       <div class="row">
-        <div class="col s20 m12">
+        <div class="col s12">
           <h2 class="header", style="margin-left: -70px;"><b>Game Details</b></h2>
           <div class="card horizontal", style="width: 1200px; margin-left: -70px;">
             <div class="card-image">
-              <img src="img/1.jpg", style="height: 900px; width: 700px;">
+              <img src="{{ game.game_image.url }}", style="height: 900px; width: 700px;">
             </div>
             <div class="card-stacked">
               <div class="card-content">
-                <span class = "card-title", style="font-size: 30px;"><b>Minecraft</b></span>
-                <span><b>June 30, 2010 (14 years ago)</b></span>
+                <span class = "card-title", style="font-size: 30px;"><b>{{ game.game_name }}</b></span>
+                <span><b>{{ game.game_release }}</b></span>
                 <br>
                 <p>
-                  Minecraft focuses on allowing the player to explore, interact with, and modify a dynamically-generated map made of one-cubic-meter-sized blocks. In addition to blocks, the environment features plants, mobs, and items. Some activities in the game include mining for ore, fighting hostile mobs, and crafting new blocks and tools by gathering various resources found in the game. The game's open-ended model allows players to create structures, creations, and artwork on various multiplayer servers or their single-player maps. Other features include redstone circuits for logic computations and remote actions, minecarts and tracks, and a mysterious underworld called the Nether. A designated but completely optional goal of the game is to travel to a dimension called the End, and defeat the ender dragon.</p>
-                <br>
+                  {{ game.game_bio }}
+                    <br>
                 <div class="divider"></div>
                 <br>
-                <p>Company: <b>Mojang Studios</b></p>
-                <p>Platforms: <b>Linux, Mac, PC (Microsoft Windows)</b></p>
-                <p>Genre: <b>Adventure, Simulator</b></p>
+                <p>Company: <b>{{ game.game_production }}</b></p>
+                <p>Platforms: <b>{{ game.game_platform }}</b></p>
+                <p>Genre: <b>{{ game_type.name }}</b></p>
                 <ul class="collection">
                   <li class="collection-item avatar">
                     <img src="img/10.jpg" alt="" class="circle">
-                    <span class="title", style="font-size: 17px; color: blueviolet;"><b>IGDB Rating</b></span>
+                    <span class="title", style="font-size: 17px; color: blueviolet;"><b>{{ game.game_rating }}</b></span>
                     <p><b>9.3 / 10</b></p>
                     <a href="#!" class="secondary-content"><i class="material-icons", style="color: #4DD0ED;">grade</i></a>
                   </li>
@@ -91,7 +104,7 @@
       
       </div>
       <h4 style="margin-left: -60px;">Reviews</h4>
-      <div class="divider" style="margin-left: -60px; width: 1200px;"></div>
+      <div class="divider"></div>
       <br>
       
       <div class="row">
