--- a/iadsapp/templates/game_details.html
+++ b/iadsapp/templates/game_details.html
@@ -7,8 +7,9 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <style>
+  <style>
     /* Add custom styles here */
     body {
       background-color: #f5f5f5;
@@ -38,18 +39,14 @@
     </div>
   </nav>
 
-  
-
-    
-
-  <div class="container">
+  <div class="container ">
     <div class="section">
 
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12">
-          <h2 class="header", style="margin-left: -70px;"><b>Game Details</b></h2>
-          <div class="card horizontal", style="width: 1200px; margin-left: -70px;">
+          <h2 class="header", style="margin-left: 35px;"><b>Game Details</b></h2>
+          <div class="card horizontal ", style="width: 1200px; margin-left: 35px;">
             <div class="card-image">
               <img src="{{ game.game_image.url }}", style="height: 900px; width: 700px;">
             </div>
@@ -58,25 +55,29 @@
                 <span class = "card-title", style="font-size: 30px;"><b>{{ game.game_name }}</b></span>
                 <span><b>{{ game.game_release }}</b></span>
                 <br>
+                  <br>
                 <p>
-                  {{ game.game_bio }}
+                    {{ game.game_bio }}
                     <br>
+                  <br>
                 <div class="divider"></div>
                 <br>
-                <p>Company: <b>{{ game.game_production }}</b></p>
-                <p>Platforms: <b>{{ game.game_platform }}</b></p>
-                <p>Genre: <b>{{ game_type.name }}</b></p>
+                <p>Company:  <b> {{ game.game_production }}</b></p>
+                <p>Platforms:  <b> {{ game.game_platform }}</b></p>
+                <p>Genre:  <b> {{ game.game_type }}</b></p>
+                  <br>
+
                 <ul class="collection">
                   <li class="collection-item avatar">
                     <img src="img/10.jpg" alt="" class="circle">
-                    <span class="title", style="font-size: 17px; color: blueviolet;"><b>{{ game.game_rating }}</b></span>
-                    <p><b>9.3 / 10</b></p>
+                    <span class="title", style="font-size: 17px; color: blueviolet;"><b>PCGamer Rating</b></span>
+                    <p><b>{{ game.game_rating }}</b></p>
                     <a href="#!" class="secondary-content"><i class="material-icons", style="color: #4DD0ED;">grade</i></a>
                   </li>
                   <li class="collection-item avatar">
                     <img src="img/10.jpg" alt="" class="circle">
                     <span class="title", style="font-size: 17px; color: blueviolet;"><b>PCGamer Rating</b></span>
-                    <p><b>10 / 10</b></p>
+                    <p><b>{{ game.game_rating }}</b></p>
                     <a href="#!" class="secondary-content"><i class="material-icons", style="color: #4DD0ED;">grade</i></a>
                   </li>
                   </ul>
@@ -93,94 +94,16 @@
                       </span></i>Watched</a>
                     </div></center>
               </div>
-              
-              <div class="card-action">
-                <span>Share: </span>
-                <a href="#", style="font-style: normal;"><b>https://www.igdb.com/g/3d</b></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      
-      </div>
-      <h4 style="margin-left: -60px;">Reviews</h4>
-      <div class="divider"></div>
-      <br>
-      
-      <div class="row">
-        <div class="col s12 m12">
-          <div class="card", style="margin-left: -70px; width: 1200px;">
-            <div class="card-content">
-              <ul class="collection">
-                <li class="collection-item avatar">
-                  <img src="img/no_avatar.webp" alt="" class="circle">
-                  <span class="title"><b>Ruchi Nakum</b></span>
-                  <p>@ruchinakum</p>
-                  <p>23 October 2023</p>
-                  <a href="#!" class="secondary-content", style="color: #4DD0ED;"><i class="material-icons", style="color: #4DD0ED;">grade</i> 10/10 Master Piece</a>
-                </li>
-
-                <li class="collection-item avatar">
-                  <img src="img/no_avatar.webp" alt="" class="circle">
-                  <span class="title"><b>Bhavya Chauhan</b></span>
-                  <p>@bhavyachauhan</p>
-                  <p>2 September 2022</p>
-                  <a href="#!" class="secondary-content", style="color: #4DD0ED;"><i class="material-icons", style="color: #4DD0ED;">grade</i> 9.8/10 Love the Game!!</a>
-                </li>
-              </ul>
             </div>
           </div>
         </div>
       </div>
-
     </div>
   </div>
 
-
-  
-
-
-  <footer class="page-footer cyan">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
-
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-      </div>
-    </div>
-  </footer>
-
-
-  <!--  Scripts-->
+  <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
-
-  </body>
+</body>
 </html>
