--- a/iadsapp/static/iadsapp/most_popular_games.css
+++ b/iadsapp/static/iadsapp/most_popular_games.css
@@ -9,7 +9,7 @@ h1 {
     color: #333;
     text-align: left;
     padding: 20px 20px;
-    background-color: #BBC2CC;
+    background-color: #03a9f4;
     margin: 0;
 }
 .game-container {
@@ -23,13 +23,13 @@ h1 {
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    width: 80%; /* Adjust the width as per your requirement */
+    width: 80%;
     margin-bottom: 20px;
     display: flex;
     align-items: center;
 }
 .game img {
-    max-width: 100px; /* Adjust the image width as needed */
+    max-width: 100px; 
     border-radius: 5px;
     margin-right: 20px;
 }
