--- a/iadsapp/templates/index.html
+++ b/iadsapp/templates/index.html
@@ -35,7 +35,7 @@
     <a href="#!" class="brand-logo"><img src="{% static 'img/icons/game.png'%}" alt=""></a>
     <ul class="right hide-on-med-and-down">
       <!-- Dropdown Trigger -->
-      <li><a href="{% url 'signup' %}">Sign Up</a></li>
+      <li><a href="{% url 'signin1' %}">Sign Up</a></li>
       <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Menu<i class="material-icons right">arrow_drop_down</i></a></li>
     </ul>
   </div>
