--- a/iadsapp/templates/most_popular_games.html
+++ b/iadsapp/templates/most_popular_games.html
@@ -1,23 +1,73 @@
+{% extends 'base.html' %}
+
+{% block title %}
+Most Popular Games
+{% endblock %}
+
+{% block content %}
 {% load static %}
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Most Popular Games</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'iadsapp/most_popular_games.css' %}">
-</head>
-<body>
-    <h1>Most Popular Games</h1>
-    <div class="game-container">
-        {% for game in popular_games %}
-            <div class="game">
-                <img src="{% static '' %}{{ game.game_image }}" alt="{{ game.game_name }}" class="game-image">
-                <div class="game-details">
-                    <h2>{{ game.game_name }}</h2>
-                    <p>Rating: {{ game.game_rating }}</p>
-                    <p>Release: {{ game.game_release }}</p>
-                </div>
-            </div>
-        {% endfor %}
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        margin: 0;
+        padding: 0;
+    }
+    h1 {
+        color: #333;
+        text-align: left;
+        padding: 5px 5px;
+        margin: 0;
+    }
+    .game-container {
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+        padding: 10px;
+    }
+    .game {
+        background-color: #fff;
+        border-radius: 5px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        width: 80%;
+        margin-bottom: 20px;
+        display: flex;
+        align-items: center;
+    }
+    .game img {
+        max-width: 100px; 
+        border-radius: 5px;
+        margin-right: 20px;
+    }
+    .game-details {
+        flex: 1;
+        text-align: left;
+    }
+    .game h3 {
+        font-size: 2rem;
+        margin: 2px 0;
+        color: #666;
+    }
+    .game p {
+       
+        margin: 2px 0;
+        color: #666;
+    }
+</style>
+
+<h1>Most Popular Games</h1>
+   
+<div class="game-container">
+    {% for game in popular_games %}
+    <div class="game">
+        <img src="{% static game.game_image %}" alt="{{ game.game_name }}" class="game-image">
+        <div class="game-details">
+            <h3 >{{ game.game_name }}</h3>
+            <p>Rating: {{ game.game_rating }}</p>
+            <p>Release: {{ game.game_release }}</p>
+        </div>
     </div>
-</body>
-</html>
+    {% endfor %}
+</div>
+{% endblock %}
