--- a/iadsapp/templates/game_types.html
+++ b/iadsapp/templates/game_types.html
@@ -1,22 +1,16 @@
+{% extends 'base.html' %}
+{% block content %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Game Types</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'iadsapp/game_type_style.css' %}">
-    <!-- Add Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
+
 <div class="container">
+
     <div class="row">
         <div class="col-md-6">
-        <h2 class="gradient-text">Games Genres/Themes</h2>
+        <h2 class="gradient-text">Games Genres</h2>
 
             <ul class="game-types">
                 {% for game in game_types %}
-                    <li class="game-type" style="color: {{ game.color }}">{{ game.id }} <a href="{% url 'game_detail' game.id %}">{{ game.name }}</a></li>
+                    <li class="game-type" > <a href="{% url 'games_by_genre' game.id %}">{{ game.name }}</a></li>
                 {% endfor %}
             </ul>
         </div>
@@ -31,5 +25,4 @@
         </div>
     </div>
 </div>
-</body>
-</html>
+{% endblock%}
