--- a/iadsapp/templates/search_results.html
+++ b/iadsapp/templates/search_results.html
@@ -1,113 +1,38 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Parallax Template - Materialize</title>
+{% extends 'base.html' %}
 
-  <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="{% static 'css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="{% static 'css/style.css'%}" type="text/css" rel="stylesheet" media="screen,projection"/>
-</head>
-<body>
-  <nav class = 'light-blue'>
-    <div class="nav-wrapper">
-      <style>
-        .brand-logo img {
-            width: 50px;
-            height: 50px;
-            padding-left: 10px; 
-            padding-top: 10px;
-        }
-    </style>
-      <a href="#!" class="brand-logo"><img src="{% static 'img/icons/game.png' %}" alt=""></a>
-      <ul class="right hide-on-med-and-down">
-        <!-- Dropdown Trigger -->
-        <li><a href="badges.html">Sign In</a></li>
-        <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Menu<i class="material-icons right">arrow_drop_down</i></a></li>
-      </ul>
-    </div>
-  </nav>
+{% block title %}
+    Search Results
+{% endblock %}
 
-
-  <div id="index-banner">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <h2 class="header orange-text">Search results for:</h2>
-        <h3 class="header black-text">Fifa</h3>
-      </div>
-    </div>
-  </div>
-
-
-
-
-  <div class="container">
-    <div class="section">
-
-      <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
-            <div class="card">
-              <div class="card-image">
-                <img width="300" height="350" src="{% static 'img/fifa1.jpg'%}"> 
-              </div>
-              <div class="card-content">
-                <span class="card-title"><b>FIFA 10</b></span>
-                <span class="right"><i class="material-icons">date_range</i>2010</span>
-                <p><b>Game</b></p>
-              </div>
+{% block content %}
+    <div class="container">
+        <div class="section">
+            <h2 class="header teal-text text-lighten-2">Search Results for "{{ query }}"</h2>
+            <div class="row">
+                <div class="col s12">
+                    <ul class="collection">
+                        {% for result in results %}
+                            <li class="collection-item">
+                                <div class="row">
+                                    <div class="col s3">
+                                        <img src="{{ result.game_image.url }}" alt="{{ result.game_name }}" class="responsive-img">
+                                    </div>
+                                    <div class="col s9">
+                                        <h5>{{ result.game_name }}</h5>
+                                        <p>{{ result.game_production }}</p>
+                                        <p>{{ result.game_release }}</p>
+                                        <p>{{ result.game_platform }}</p>
+                                        <p>{{ result.game_rating }}</p>
+{#                                        <p>{{ result.game_bio }}</p>#}
+                                    </div>
+                                </div>
+                            </li>
+                        {% empty %}
+                            <li class="collection-item">No games found for the selected game type.</li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
-          </div>
-
-
-          <div class="col s12 m4">
-            <div class="card">
-              <div class="card-image">
-                <img width="300" height="350" src= "{% static 'img/fifa2.jpg'%}">
-              </div>
-              <div class="card-content">
-                <span class="card-title"><b>FIFA 12</b></span>
-                <span class="right"><i class="material-icons">date_range</i>2012</span>
-                <p><b>Game</b></p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col s12 m4">
-            <div class="card">
-              <div class="card-image">
-                <img width="300" height="350"src="{% static 'img/fifa3.jpg'%}">
-              </div>
-              <div class="card-content">
-                <span class="card-title"><b>FIFA 14</b></span>
-                <span class="right"><i class="material-icons">date_range</i>2014</span>
-                <p><b>Game</b></p>
-              </div>
-            </div>
-          </div>
-          <div class="col s12 m12 center-align">
-            <a class="waves-effect waves-light btn"><i class="material-icons left">add</i>Load more</a>
-          </div>
-      </div>  
-      
+        </div>
     </div>
-  </div>
-</div>
-</div>
-
-
-  
-
-  
-
-
-  <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="{% static 'js/materialize.js'%}"></script>
-  <script src="{% static 'js/init.js'%}"></script>
-
-  </body>
-</html>
+{% endblock %}
