--- a/iadsapp/templates/index.html
+++ b/iadsapp/templates/index.html
@@ -15,13 +15,14 @@
 <body>
   <!-- Dropdown Structure -->
 <ul id="dropdown1" class="dropdown-content">
-  <li><a href="">Calender</a></li>
+<!--  <li><a href="">Calender</a></li>-->
   <li><a href="{% url 'top100_games' %}">Top 100 Games</a></li>
   <li><a href="{% url 'most_popular_games' %}">Most Popular</a></li>
   <li><a href="{% url 'game_type' %}">Games by Genre</a></li>
-  <li><a href="#!">Awards</a></li>
+  <li><a href="{% url 'awards_list' %}">Awards</a></li>
   <li class="divider"></li>
-  <li><a href="{% url 'upcoming_releases' %}">Games News</a></li>
+  <li><a href="{% url 'upcoming_releases' %}">Calendar</a></li>
+  <li><a href="{% url 'game_news' %}">Games News</a></li>
 </ul>
 <nav  style="background-color: #26a69a;">
   <div class="nav-wrapper">
