--- a/iadsapp/templates/profile.html
+++ b/iadsapp/templates/profile.html
@@ -46,6 +46,8 @@
               <li class="collection-item">Bio:<p><b>We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated. </b></p></li>
 
             </ul>
+              <a href="" class="btn">Edit Profile</a>
+              <a href="" class="btn">Logout</a>
           </div>
         <div class="col s12 m8 ">
           <ul class="collection">
@@ -67,6 +69,13 @@
             <li class="collection-item avatar">
               <i class="material-icons circle red">folder</i>
               <span class="title">Rated</span>
+              <p class="center-align"><b>5</b></p>
+              <a href="#!" class="secondary-content"><b>Show</b></a>
+            </li>
+
+              <li class="collection-item avatar">
+              <i class="material-icons circle purple">folder</i>
+              <span class="title">Visits per days</span>
               <p class="center-align"><b>5</b></p>
               <a href="#!" class="secondary-content"><b>Show</b></a>
             </li>
