modified game news

--- a/iadsapp/templates/game_news.html
+++ b/iadsapp/templates/game_news.html
@@ -52,7 +52,7 @@
                     <img src="{{ news.image.url }}" style="margin-left:  30px; width: 1200px">
                 </div>
                 <div style="margin-left:  30px; width: 1200px;">
-                    <p>{{ news.description }}</p>
+                    <p>{{ news.description | linebreaks }}</p>
                 </div>
             </div>
         </div>
