--- a/iadsapp/templates/profile.html
+++ b/iadsapp/templates/profile.html
@@ -46,7 +46,7 @@
               <li class="collection-item">Bio:<p><b>We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated. </b></p></li>
 
             </ul>
-              <a href="" class="btn">Edit Profile</a>
+              <a href="{% url 'edit_profile' %}" class="btn">Edit Profile</a>
               <a href="" class="btn">Logout</a>
           </div>
         <div class="col s12 m8 ">
