--- a/iadsapp/static/css/awardpage.css
+++ b/iadsapp/static/css/awardpage.css
@@ -1,6 +1,5 @@
-/* awards/static/css/style.css */
-.right-image {
-    float: right; /* Float the image to the right */
-    margin-left: 20px; /* Add some margin to the left for spacing */
-    max-width: 100%; /* Ensure the image doesn't exceed its container's width */
+/* Add this CSS in your stylesheet */
+.align-right {
+    float: right;
+    margin-left: 10px; /* Adjust margin as needed */
 }
