--- a/iadsapp/templates/most_popular_games.html
+++ b/iadsapp/templates/most_popular_games.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-
 {% block title %}
 Most Popular Games
 {% endblock %}
@@ -7,67 +6,67 @@ Most Popular Games
 {% block content %}
 {% load static %}
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
-        margin: 0;
-        padding: 0;
-    }
-    h1 {
-        color: #333;
-        text-align: left;
-        padding: 5px 5px;
-        margin: 0;
-    }
-    .game-container {
-        display: flex;
-        flex-direction: column;
-        align-items: left;
-        padding: 10px;
-    }
-    .game {
-        background-color: #fff;
-        border-radius: 5px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        padding: 20px;
-        width: 80%;
-        margin-bottom: 20px;
-        display: flex;
-        align-items: center;
-    }
-    .game img {
-        max-width: 100px; 
-        border-radius: 5px;
-        margin-right: 20px;
-    }
-    .game-details {
-        flex: 1;
-        text-align: left;
-    }
-    .game h3 {
-        font-size: 2rem;
-        margin: 2px 0;
-        color: #666;
-    }
-    .game p {
-       
-        margin: 2px 0;
-        color: #666;
+    .card:hover {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transform: scale(1.05);
+        transition: all 0.3s ease;
     }
 </style>
 
-<h1>Most Popular Games</h1>
-   
-<div class="game-container">
-    {% for game in popular_games %}
-    <div class="game">
-        <img src="{% static game.game_image %}" alt="{{ game.game_name }}" class="game-image">
-        <div class="game-details">
-            <h3 >{{ game.game_name }}</h3>
-            <p>Rating: {{ game.game_rating }}</p>
-            <p>Release: {{ game.game_release }}</p>
+<div class="container">
+    <div class="section">
+        <!-- Game Filter Section -->
+        <div class="row">
+
+            <div class="col s12 m6" style="color: #00acc1">
+                <h3 style="margin-top: 0;">Most Popular Games</h3>
+            </div>
+
+            <div class="col s12 m3"></div>
+
+
+            <!-- Sort Dropdown -->
+            <div class="col s12 m3 offset-m3">
+                <div class="input-field">
+                    <form id="filterForm" method="get">
+                        <select name="sort" onchange="document.getElementById('filterForm').submit();">
+                            <option value="" {% if not request.GET.sort %}selected{% endif %}>No Filter</option>
+                            <option value="a_z" {% if request.GET.sort == "a_z" %}selected{% endif %}>A-Z</option>
+                            <option value="z_a" {% if request.GET.sort == "z_a" %}selected{% endif %}>Z-A</option>
+                            <option value="rating" {% if request.GET.sort == "rating" %}selected{% endif %}>By Rating</option>
+                            <option value="release_date" {% if request.GET.sort == "release_date" %}selected{% endif %}>By Release Date</option>
+                        </select>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Game List Section -->
+        <div class="row">
+            {% for game in popular_games %}
+                <div class="col s12 m6 l3">
+                    <div class="card" style="height: 365px;">
+                        <div class="card-image" style="height: 200px; width: 100%; overflow: hidden;">
+                            <img src="{% static '' %}{{ game.game_image }}" alt="{{ game.game_name }}" class="game-image" style="width: 100%; height: auto; object-fit: contain;">
+                        </div>
+                        <div class="card-content" style="height: 150px;">
+                            <span class="card-title" style="font-size: 1rem; font-weight: bold; line-height: 1.25rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;">
+                                <a href="{% url 'game_detail' game.id %}">{{ game.game_name }}</a>
+                            </span>
+                            <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">{{ game.game_release }}</p>
+                            <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">{{ game.game_type }}</p>
+                            <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">
+                                <span style="color: yellow; font-size: 24px;">&#9733;</span> {{ game.game_rating }}
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                {% if forloop.counter|divisibleby:4 and not forloop.last %}
+                    </div><div class="row">
+                {% endif %}
+            {% endfor %}
         </div>
     </div>
-    {% endfor %}
 </div>
 {% endblock %}
