--- a/iadsapp/templates/search_results.html
+++ b/iadsapp/templates/search_results.html
@@ -4,6 +4,7 @@ Search Results
 {% endblock %}
 
 {% block content %}
+{% load static %}
 <div class="container">
     <div class="section">
         <h3 style="margin-top: 0;">Search Results for "{{ query }}"</h3>
@@ -14,13 +15,12 @@ Search Results
                 <div class="col s12 m6 l3">
                     <div class="card" style="height: 365px;">
                         <div class="card-image" style="height: 200px; width: 100%; overflow: hidden;">
-                            <img src="{{ result.game_image.url }}" alt="{{ result.game_name }}" class="game-image" style="width: 100%; height: auto; object-fit: contain;">
+                            <img src="{% static '' %}{{ result.game_image }}" alt="{{ result.game_name }}" class="game-image" style="width: 100%; height: auto; object-fit: contain;">
                         </div>
                         <div class="card-content" style="height: 150px;">
                             <span class="card-title" style="font-size: 1rem; font-weight: bold; line-height: 1.25rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;">
                                 <a href="{% url 'game_detail' result.id %}">{{ result.game_name }}</a>
                             </span>
-{#                            <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">{{ result.game_production }}</p>#}
                             <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">{{ result.game_release }}</p>
                             <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">{{ result.game_platform }}</p>
                             <p style="font-size: 1.0rem; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;">
