--- a/iadsapp/templates/base.html
+++ b/iadsapp/templates/base.html
@@ -17,13 +17,14 @@
     <div class="nav-wrapper">
         <style>
             .brand-logo img {
-                width: 50px;
-                height: 50px;
-                padding-left: 10px;
-                padding-top: 10px;
+                width: 65px;
+                height: 65px;
+                padding: 2px;
+                border-radius: 50%;
+
             }
         </style>
-        <a href="#!" class="brand-logo"><img src="{% static 'img/icons/game.png' %}" alt=""></a>
+        <a href="{% url 'homepage' %}" class="brand-logo"><img src="{% static 'img/icons/Untitled design.gif' %}" alt=""></a>
         <ul class="right hide-on-med-and-down">
             <li><a href="{% url 'signup' %}">Sign Up</a></li>
             <!-- Dropdown Trigger -->
