--- a/iadsapp/templates/signup.html
+++ b/iadsapp/templates/signup.html
@@ -1,49 +1,10 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'iadsapp/signup.css' %}">
-    <title>GameCriticHub - Sign Up</title>
-</head>
-<body>
-    <div class="signup-container">
-        <div class="header">
-            <div class="title-container">
-                <h1 class="website-title">GameCriticHub</h1>
-            </div>
-        </div>
+{% extends 'base.html' %}
 
-        <div class="content-container">
-            <div class="black-box">
-                <h2 class="create-account-title">Create Your Account</h2>
-                <form method="post" action="{% url 'signup' %}">
-                    {% csrf_token %}
-                    {{ form.FirstName.label_tag }}
-                    {{ form.FirstName }}
-
-                    {{ form.LastName.label_tag }}
-                    {{ form.LastName }}
-
-                    {{ form.email.label_tag }}
-                    {{ form.email }}
-
-                    {{ form.password.label_tag }}
-                    {{ form.password }}
-                    <p class="password-statement">Password must be at least 8 characters.</p>
-
-                    {{ form.reenter_password.label_tag }}
-                    {{ form.reenter_password }}
-
-                    <button type="submit" class="create-account-button">Create Your Account</button>
-                </form>
-            </div>
-
-            <div class="existing-account">
-                <p>Already have an account? <a href="{% url 'signin' %}">Sign In</a></p>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+{% block content %}
+<h2>Sign Up</h2>
+<form method="post" action="{% url 'signup' %}">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit">Sign Up</button>
+</form>
+{% endblock %}
